<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:layout_marginTop="6dp"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/button_primary_text_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name_hint"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColorHint="@color/colorAccent"
                    android:textCursorDrawable="@color/colorAccent"
                    android:textSize="@dimen/button_primary_text_size" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_name"
                android:layout_marginTop="6dp"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/button_primary_text_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_second_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_second_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/second_name_hint"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColorHint="@color/colorAccent"
                    android:textCursorDrawable="@color/colorAccent"
                    android:textSize="@dimen/button_primary_text_size" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <include
            layout="@layout/layout_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_your_city"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/button_primary_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_required"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/button_secondary_text_size" />
            </LinearLayout>

            <Button
                android:id="@+id/button_choose_city"
                style="@style/ButtonSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:background="@drawable/btn_secondary_background"
                android:text="@string/click" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_sign_up"
        style="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/btn_primary_background"
        android:text="@string/sign_up" />
</FrameLayout>